force-app/main/default/objects/smartystreets__SmartySettings__c/smartystreets__SmartySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Address Verification - Setup</description>
    <label>√ Settings</label>
</CustomObject>