force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__AccountWhereClause__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AccountWhereClause__c</fullName>
    <label>Account Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>