force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__AllowStreetOnlyVerifications__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AllowStreetOnlyVerifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, then addresses without City and State will be verified</description>
    <inlineHelpText>If this is checked, then addresses without City and State will be verified</inlineHelpText>
    <label>Allow Street Only Verifications</label>
    <type>Checkbox</type>
</CustomField>