force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__auth_token__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__auth_token__c</fullName>
    <label>auth-token</label>
    <length>128</length>
    <type>Text</type>
</CustomField>