force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__authidinternational__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__authidinternational__c</fullName>
    <label>auth-id-international</label>
    <length>128</length>
    <type>Text</type>
</CustomField>