force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__authtokeninternational__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__authtokeninternational__c</fullName>
    <label>auth-token-international</label>
    <length>128</length>
    <type>Text</type>
</CustomField>