force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Automatically_Verify_Accounts__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Automatically_Verify_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Verify Accounts</label>
    <type>Checkbox</type>
</CustomField>