force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__AutoverifyContactswithAccountInfo__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AutoverifyContactswithAccountInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Billing = Contact Mailing</label>
    <type>Checkbox</type>
</CustomField>