force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__BETA__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__BETA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BETA</label>
    <type>Checkbox</type>
</CustomField>