force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Check_For_Existing_Accounts__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Check_For_Existing_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check For Existing Accounts</label>
    <type>Checkbox</type>
</CustomField>