force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Check_for_Existing_Leads__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Check_for_Existing_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for Existing Leads</label>
    <type>Checkbox</type>
</CustomField>