force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__ContactWhereClause__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ContactWhereClause__c</fullName>
    <label>Contact Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>