force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__CountrieswithStates__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CountrieswithStates__c</fullName>
    <description>Comma delimited country codes where states are to be populated in the primary State field. Please use the ISO-Alpha-3 code (3 characters)</description>
    <inlineHelpText>Comma delimited country codes where states are to be populated in the primary State field. Please use the ISO-Alpha-3 code (3 characters)</inlineHelpText>
    <label>Countries with States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>