force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__DefaultCountry__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__DefaultCountry__c</fullName>
    <defaultValue>&quot;USA&quot;</defaultValue>
    <label>Default Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>