force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__DoNotVerifyAfterPaidAutocomplete__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__DoNotVerifyAfterPaidAutocomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Verify After Paid Autocomplete</label>
    <type>Checkbox</type>
</CustomField>