force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__EmailUponAutomationCompletion__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__EmailUponAutomationCompletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Upon Automation Completion</label>
    <type>Checkbox</type>
</CustomField>