force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__ExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ExpirationDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ExpirationDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>