force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__GEO_API_Key__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__GEO_API_Key__c</fullName>
    <label>GEO API Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>