force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__GooglePlacesAPIKey__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__GooglePlacesAPIKey__c</fullName>
    <description>Usage: key=API_KEY</description>
    <inlineHelpText>Usage: key=API_KEY</inlineHelpText>
    <label>Google Places API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>