force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Key__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Key__c</fullName>
    <description>SmartyStreets API Access Key obtained by setting up an account at www.smartystreets.com.</description>
    <inlineHelpText>SmartyStreets API Access Key obtained by setting up an account at www.smartystreets.com.</inlineHelpText>
    <label>Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>