force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Large_Object_Option__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Large_Object_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for the functionality when there is &gt;200000 record and we can&apos;t fetch it in trigger ,so we created same thing in batch and this will run in batch if this is true</description>
    <label>Large Object Option</label>
    <type>Checkbox</type>
</CustomField>