force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__LastBatchErrorSent__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LastBatchErrorSent__c</fullName>
    <label>Last Batch Error Sent</label>
    <type>DateTime</type>
</CustomField>