force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__LeadWhereClause__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LeadWhereClause__c</fullName>
    <label>Lead Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>