force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__LogoandButtoninLightning__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LogoandButtoninLightning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logo and Button in Lightning</label>
    <type>Checkbox</type>
</CustomField>