force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__LogResponses__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LogResponses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Responses?</label>
    <type>Checkbox</type>
</CustomField>