force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__LongStateName__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__LongStateName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long State Name</label>
    <type>Checkbox</type>
</CustomField>