force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__ObjectNamespace__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ObjectNamespace__c</fullName>
    <label>Object Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>