force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__OnlyAutoverifyInserts__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__OnlyAutoverifyInserts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Autoverify Inserts</label>
    <type>Checkbox</type>
</CustomField>