force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Primary_Verification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Primary_Verification__c</fullName>
    <label>Primary Verification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>