force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Process_Layout__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Process_Layout__c</fullName>
    <description>Process Layout in Back-end for users that do not have permission to read layout</description>
    <inlineHelpText>Process the Layout for Users that do not have enough permission</inlineHelpText>
    <label>Process Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>