force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Rating__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Rating__c</fullName>
    <label>Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>