force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__RestrictReverifications__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RestrictReverifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Reverifications</label>
    <type>Checkbox</type>
</CustomField>