force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Run_Territory_Rules__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Run_Territory_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Territory Rules</label>
    <type>Checkbox</type>
</CustomField>