force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Schedule_Account_Verification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Schedule_Account_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Account Verification</label>
    <type>Checkbox</type>
</CustomField>