force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>