force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__Secondary_Verification__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Secondary_Verification__c</fullName>
    <label>Secondary Verification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>