force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__SeparateUnitField__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__SeparateUnitField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate Unit Field</label>
    <type>Checkbox</type>
</CustomField>