force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__StandardNameForUSA__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__StandardNameForUSA__c</fullName>
    <label>StandardNameForUSA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>