force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__TranslateCountry__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__TranslateCountry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Translate Country</label>
    <type>Checkbox</type>
</CustomField>