force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__TriggerUpdatesWithNoChanges__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__TriggerUpdatesWithNoChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Updates With No Changes</label>
    <type>Checkbox</type>
</CustomField>