force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__TurnOffTriggers__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__TurnOffTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Off Triggers</label>
    <type>Checkbox</type>
</CustomField>