force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__UPS_API_Username__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UPS_API_Username__c</fullName>
    <label>UPS API Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>