force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__UseGoogleDidYouMean__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UseGoogleDidYouMean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Google Did You Mean?</label>
    <type>Checkbox</type>
</CustomField>