force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__UsePaidAutoComplete__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UsePaidAutoComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Paid AutoComplete</label>
    <type>Checkbox</type>
</CustomField>