force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__VerificationPremiseMinimum__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__VerificationPremiseMinimum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verification Premise Minimum</label>
    <type>Checkbox</type>
</CustomField>