force-app/main/default/objects/smartystreets__SmartySettings__c/fields/smartystreets__VerifyInternationalAddresses__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__VerifyInternationalAddresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify International Addresses</label>
    <type>Checkbox</type>
</CustomField>